--- a/festival/Client/Shared/NavMenu.razor
+++ b/festival/Client/Shared/NavMenu.razor
@@ -24,6 +24,26 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="minprofil">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Min profil
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="koordinator">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Koordinator
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="vagter">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Vagt-oversigt
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="point">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Point-oversigt
+            </NavLink>
+        </div>
     </nav>
 </div>
 
