--- a/festival/Client/Shared/NavMenu.razor
+++ b/festival/Client/Shared/NavMenu.razor
@@ -15,16 +15,6 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="minprofil">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Min profil
             </NavLink>
@@ -35,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="vagter">
+            <NavLink class="nav-link" href="vagt">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Vagt-oversigt
             </NavLink>
         </div>
