--- a/festival/Client/Shared/NavMenu.razor
+++ b/festival/Client/Shared/NavMenu.razor
@@ -15,6 +15,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="frivilligepage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Frivillige
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="minprofil">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Min profil
             </NavLink>
