--- a/festival/Client/Pages/VagtPage.razor
+++ b/festival/Client/Pages/VagtPage.razor
@@ -35,7 +35,7 @@ else //Oprettelse af table
             </tr>
         </thead>
         <tbody>
-            @foreach (var get in gets) //var get in gets -- tidligere
+            @foreach (var get in gets) //var get in gets -- tidligeree
             {
 
                 <tr>
@@ -43,7 +43,6 @@ else //Oprettelse af table
                     <td>@get.Fornavn</td>
                     <td>@get.Efternavn</td>
                     <td>@get.Alder</td>
-
 
                 </tr>
             }
