--- a/festival/Client/Pages/VagtPage.razor
+++ b/festival/Client/Pages/VagtPage.razor
@@ -35,7 +35,7 @@ else //Oprettelse af table
             </tr>
         </thead>
         <tbody>
-            @foreach (var get in gets) //var get in gets -- tidligeree
+            @foreach (var get in gets) //var get in gets -- tidligere123
             {
 
                 <tr>
