--- a/festival/Client/Shared/NavMenu.razor
+++ b/festival/Client/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="frivilligepage">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Frivillige
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Opret frivillige
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -30,8 +30,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="vagt">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Vagt-oversigt
+            <NavLink class="nav-link" href="vagtliste">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Vagt liste
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="frivilligeliste">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Listen over frivillige
             </NavLink>
         </div>
         <div class="nav-item px-3">
