--- a/festival/Client/Pages/FrivilligeListe.razor
+++ b/festival/Client/Pages/FrivilligeListe.razor
@@ -30,6 +30,10 @@ else //Oprettelse af table
                 <th>fornavn</th>
                 <th>efternavn</th>
                 <th>alder</th>
+                <th>email</th>
+                <th>tlf</th>
+
+
 
 
             </tr>
@@ -43,6 +47,10 @@ else //Oprettelse af table
                     <td>@get.Fornavn</td>
                     <td>@get.Efternavn</td>
                     <td>@get.Alder</td>
+                    <td>@get.Email</td>
+                    <td>@get.Tlf</td>
+
+
 
                 </tr>
             }
