--- a/festival/Client/Pages/MinprofilPage.razor
+++ b/festival/Client/Pages/MinprofilPage.razor
@@ -6,13 +6,17 @@
 @using System.Net.Http;
 @using Npgsql;
 @using Dapper;
-@inject HttpClient Http
-
 @page "/minprofil"
+
+
 
 <PageTitle>Min profil</PageTitle>
 
+
+
 <h1>Her kan du se status på din profil</h1>
+
+
 
 
 <EditForm EditContext="@EditContext"
@@ -21,35 +25,63 @@
           class="row p-3">
 
 
-    <div class="col-12 mb-3">
-        <div class="form-check">
+
+    <div class="row">
+        <div class="col-sm-6 form-check border border-3 border border-dark ">
+
+
+
             <label for="vagter">Vælg Person</label>
 
-            <InputSelect id="Navn" @bind-Value=@frivilligid class="form-control">
+
+
+            <InputSelect id="Navn" @bind-Value=@frivilligid class="form-control rounded-2">
+
+
 
 
                 @foreach (var get in gets)
                 {
-                    <option value="@get.Frivilligid" >  @get.Fornavn @get.Efternavn </option>
-                    
+                    <option value="@get.Frivilligid"> @get.Fornavn @get.Efternavn (@get.Frivilligid) </option>
+
+
+
                 }
             </InputSelect>
+        </div>
 
 
+
+        <div class="col-sm-6 card bg-Light rounded-3 border border-3 border border-dark" style="width: 26rem; margin-left:135px;">
+            <h5 class="card-title"> Info</h5>
+            <p class="card-text"> FrivilligID: @frivilligid </p>
+            <p class="card-text"> Navn: @fornavn @efternavn </p>
+            <p class="card-text"> Valgt frivillig: @frivilligid </p>
+            <p class="card-text"> Adresse: @adresse </p>
+            <p class="card-text"> Tlf: @tlf </p>
+            <p class="card-text"> Email: @email </p>
+            <p class="card-text"> Alder: @alder </p>
+            <p class="card-text">  Antal Point: @antalPoint </p>
+            <br />
         </div>
     </div>
 </EditForm>
 
 
-      
+
+
+
+
+
 @{
-        foreach (var frivillig in gets)
-        {
+    foreach (var frivillig in gets)
+    {
         if (frivillig.Frivilligid == frivilligid)
         {
 
+
+
             ValgtFrivillig = frivillig;
-            //if (frivillig.Adresse != null)
             adresse = frivillig.Adresse;
             tlf = frivillig.Tlf;
             fornavn = frivillig.Fornavn;
@@ -58,22 +90,70 @@
             alder = frivillig.Alder;
             antalPoint = frivillig.Samletantalpoint;
             break;
-            }
         }
     }
-
-
-Navn:@fornavn @efternavn <br/>
-      Valgt frivillig: @frivilligid <br/>
-      Adresse: @adresse <br/>
-      Tlf: @tlf <br/>
-      Email: @email <br/>
-      Alder: @alder <br/>
-      Antal Point: @antalPoint
+}
 
 
 
-  
+
+<table class="table table-bordered border-dark border border-3">
+
+
+
+    <thead>
+        <tr>
+
+
+
+            <th>Frivilligid</th>
+            <th>Vagtid</th>
+            <th>Arbejdspladsid</th>
+            <th>DateStart</th>
+            <th>Antalpoint</th>
+        </tr>
+    </thead>
+    <tbody>
+
+
+
+        @{
+            //Looper gennem alle frivillige i frivilligelisten
+            foreach (var frivillig in gets)
+            {
+                if (frivillig.Frivilligid == frivilligid)
+                {
+                    //Looper gennem alle vagter i vagtlisten
+                    foreach (var vagt in vagter)
+                    {
+                        //Hvis frivillig id fra dropdown er lig frivilligid i vagtlisten, så laver vi html boks til hver vagt
+                        if (frivillig.Frivilligid == vagt.Frivilligid)
+                        {
+
+
+
+                            <tr>
+                                <td>@vagt.Frivilligid</td>
+                                <td>@vagt.Vagtid</td>
+                                <td>@vagt.Arbejdspladsid</td>
+                                <td>@vagt.Dato</td>
+                                <td>@vagt.Antalpoint</td>
+                            </tr>
+                        }
+
+
+
+                    }
+
+
+
+                }
+            }
+        }
+    </tbody>
+</table>
+
+
 
 
 
@@ -82,52 +162,71 @@ Navn:@fornavn @efternavn <br/>
 
 
 
-    [Inject]
-    public IFrivilligeService frivilligeService { get; set; }
-    private int ErrorCode { get; set; } = 0;
 
-    //Vores default værdi til vores forms
+    //Default værdier for frivillige
+
+
 
     public string fornavn = "Navn";
     public string efternavn = "Navn";
     public int frivilligid = 0;
     public string adresse = "";
     public string tlf = "";
-    public string arbejdsplads = "";
+
+
+
     public int alder = 0;
     public string email = "";
-    public int antalPoint = 0;
-
+    public int antalSamletPoint = 0;
     public Frivillige ValgtFrivillig = new Frivillige();
 
 
-    //Vores indtastet data bliver tilføjet til vores database
-    private async Task selectid()
-    {
-        Frivillige item = new Frivillige(frivilligid, fornavn);
-        ErrorCode = await frivilligeService.AddItem(item);
-        frivilligid++;
-        Console.WriteLine("Shopping item added: return code: " + ErrorCode);
-    }
+
+    // -II- Vagter
+    public int? arbejdspladsid = 0;
+    public int? vagtid = 0;
+    public int? tidStart = 0;
+    public int? tidSlut = 0;
+    public int? antalPoint = 0;
+    public DateTime? dato = DateTime.Now;
+    public Vagt ValgtVagt = new Vagt();
 
 
-    //Henter vores data fra database
+
+
+
+
+    //Henter vores shelter-data fra mongo(database)
     [Inject]
     public IFrivilligeService FrivilligeService { get; set; }
+    [Inject]
+    public IVagtService VagtService { get; set; }
+
+
+
 
     public List<Frivillige> gets = new List<Frivillige>();
+    public List<Vagt> vagter = new List<Vagt>();
+
+
 
     protected override async Task OnInitializedAsync()
     {
+
+
+
         gets = (await FrivilligeService.GetAllFrivillige()).ToList();
-        foreach (Frivillige f in gets)
-        {
-            Console.WriteLine($"{f.Frivilligid} {f.Fornavn} {f.Adresse} ");
-        }
         ValgtFrivillig = gets[0];
 
 
+
+        vagter = (await VagtService.GetAllVagt()).ToList();
+        vagter = vagter.OrderBy(x => x.Vagtid).ToList();
+        ValgtVagt = vagter[0];
     }
+
+
+
 
 
 }
