--- a/festival/Client/Pages/FrivilligeListe.razor
+++ b/festival/Client/Pages/FrivilligeListe.razor
@@ -22,9 +22,9 @@
     <p><em>Loading...</em></p>
 }
 else //Oprettelse af table
-//Husk altid at "REBUILD", efter du har oprettet tabel, ellers kommer det ikke frem på WEB.
+     //Husk altid at "REBUILD", efter du har oprettet tabel, ellers kommer det ikke frem på WEB.
 {
-    <table class="table">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>frivilligid</th>
@@ -54,6 +54,11 @@ else //Oprettelse af table
             }
         </tbody>
     </table>
+
+    <div class="col-sm-12">
+        <button class="btn btn-primary" @onclick="DeleteFrivilligItemHandler">Delete frivillig</button>
+        <button class="btn btn-primary" @onclick="UpdateFrivilligItemHandler">Edit frivillig</button>
+    </div>
 }
 
 
@@ -68,32 +73,29 @@ else //Oprettelse af table
 
     }
 
-    //[Inject]
-    //public IBookingService BookingService { get; set; }
-    //public List<ShoppingItem> gets = new List<ShoppingItem>();
-    //protected override async Task OnInitializedAsync()
-    //{
-        //gets = (await BookingService.GetAllItems()).ToList();
-
-    //}
-
-
-    <!--- Mads forsøg på at hente data
-    private Frivillige[]? gets;
-
-    protected override async Task OnInitializedAsync()
+    //Sletter en af vores frivillige
+    private async void DeleteFrivilligItemHandler()
     {
-        gets = await Http.GetFromJsonAsync<Frivillige[]>("api/frivilligeapi");
-    }}
-     -->
-    <!--
-    //Her forkorter vi vores date, sådan at vi kun ser dato ikke klokkesæt.
-    public string DateStart(DateTime DateStart)
-    {
-        string result = DateStart.Date.ToShortDateString();
-        return result;
+        /*
+        Frivillige id = new Frivillige (frivilligid);
+        ErrorCode = await FrivilligeService.DeleteItem(id);
+        Console.WriteLine(ErrorCode);
+        */
 
     }
-    -->
-}
 
+
+
+    //Opdaterer en af vores frivillige
+    private async void UpdateFrivilligItemHandler()
+    {
+        /*
+        Frivillige id = new Frivillige (frivilligid);
+        ErrorCode = await FrivilligeService.DeleteItem(id);
+        Console.WriteLine(ErrorCode);
+        */
+
+    }
+
+
+}
