--- a/festival/Client/Pages/Index.razor
+++ b/festival/Client/Pages/Index.razor
@@ -1,10 +1,34 @@
 ﻿@page "/"
+<!DOCTYPE html>
+<html lang="en">
 
-<PageTitle>Index</PageTitle>
+<body>
 
-<h1>Hello, world!</h1>
+    <!-- The Band Section -->
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+        <h2 class="w3-wide align center">Musik Festival</h2>
+        <p class="w3-opacity"><i>We love music</i></p>
+        <p class="w3-justify">
+            At være frivillig til en festival kan være en spændende og givende oplevelse. Du vil have mulighed for at møde nye mennesker, lære nye ting og bidrage til at skabe en unik festivalløsning. Som frivillig vil du typisk have en række forskellige opgaver, såsom at hjælpe med opstilling og nedtagning af scenen, tjekke billetter og hjælpe med at sørge for, at gæsterne har det godt.
+        </p>
+    </div>
+    <!-- Page content -->
+    <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+        <div class="mySlides w3-display-container w3-center">
+            <img src="https://www.w3schools.com/w3images/chicago.jpg" style="width:100%">
+            <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+            </div>
+        </div>
+    </div>
 
+
+    <!-- The Contact Section -->
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+        <h2 class="w3-wide w3-center">CONTACT</h2>
+    </div>
+
+</body>
+
+</html>
