--- a/festival/Client/Pages/VagtListePage.razor
+++ b/festival/Client/Pages/VagtListePage.razor
@@ -6,6 +6,7 @@
 @using System.Net.Http;
 @using Npgsql;
 @using Dapper;
+@using System.Data;
 @page "/vagtliste"
 
 <PageTitle>Vagt liste</PageTitle>
@@ -20,8 +21,8 @@
 
     {
 
-        datoDag = vagt.DatoDag;
-        dage.Add(datoDag);
+        Dag = vagt.DatoDag;
+        dage.Add(Dag);
 
     }
 
@@ -38,69 +39,98 @@
     }
 
 
-    <table class="table">
+
+    //laver tabel
+    <table class="table table-bordered border-dark">
         <thead>
             <tr>
                 @foreach (string dag in uniqueDage)
                 {
+                    //Looper over alle dage i uniqueDage, og laver tableheader -> en for hver dag i ugen
                     <th> @dag  </th>
-;
-
                 }
             </tr>
         </thead>
         <tbody>
-            @foreach (var vagt in vagter)
+
+            @foreach (string dag in uniqueDage)
             {
-                <tr>
-                    @foreach (string dag in uniqueDage)
+
+            <td>
+                @foreach (var vagt in vagter)
+                {
+                    //Looper over alle vagter, og tilføjer information om vagten under den tilsvarende dag -> kalendersystem
+                    if (vagt.DatoDag == dag)
                     {
-                        if (vagt.DatoDag == dag)
+                        foreach (var arbejde in arbejdspladser)
                         {
-                            <td>@vagt.Vagtid</td>
-                        }
-                        else
-                        {
-                            <td></td>
+                            arbejdspladsNavn = arbejde.Arbejdspladsnavn;
+                            if (arbejde.Arbejdspladsid == vagt.Arbejdspladsid)
+                            {
+                                <div class="card text-dark bg-light" style="margin-bottom: 10px; margin-left: 5px; margin-top: 5px;">
+                            <tr>
+                                Vagt ID: @vagt.Vagtid
+                                <br />
+                                Arbejdsplads: @arbejde.Arbejdspladsnavn
+                                <br />
+                                Tidsrum: @vagt.Tidstart - @vagt.Tidslut
+                                <br />
+                                Opgave: @arbejde.Arbejdsbeskrivelse
+                                <br />
+                                Antal point: @vagt.Antalpoint
+                            </tr>
+                            </div>
+
                         }
                     }
-                </tr>
+                }
+
             }
-        </tbody>
-    </table>
+                </td>
+            }
+            </tbody>
+        </table>
+
+
+}
 
 
 
 
 
-    @code {
-        // -II- Vagter
-        public int? arbejdspladsid = 0;
-        public int? vagtid = 0;
-        public int? tidStart = 0;
-        public int? tidSlut = 0;
-        public int? antalPoint = 0;
-        public DateTime? dato = DateTime.Now;
-        public Vagt ValgtVagt = new Vagt();
-        public string? datoDag = "";
+@code {
+    // Tomme placeholders for Vagter
+    public int? arbejdspladsid = 0;
+    public int? vagtid = 0;
+    public int? tidStart = 0;
+    public int? tidSlut = 0;
+    public int? antalPoint = 0;
+    public DateTime? dato = DateTime.Now;
+    public Vagt ValgtVagt = new Vagt();
+    public string Dag = "";
+
+    // Tomme placeholders for arbejdspladser
+    public string? arbejdspladsNavn = "";
 
 
+    //Henter vores shelter-data fra mongo(database)
+
+    [Inject]
+    public IVagtService VagtService { get; set; }
+    [Inject]
+    public IArbejdspladsService ArbejdspladsService { get; set; }
 
 
-        //Henter vores shelter-data fra mongo(database)
+    public List<Vagt> vagter = new List<Vagt>();
+    public List<Arbejdsplads> arbejdspladser = new List<Arbejdsplads>();
 
-        [Inject]
-        public IVagtService VagtService { get; set; }
+    protected override async Task OnInitializedAsync()
+    {
+        vagter = (await VagtService.GetAllVagt()).ToList();
+        vagter = vagter.OrderBy(x => x.Vagtid).ToList();
+        ValgtVagt = vagter[0];
 
+        arbejdspladser = (await ArbejdspladsService.GetAllArbejdsplads()).ToList();
 
-
-        public List<Vagt> vagter = new List<Vagt>();
-
-        protected override async Task OnInitializedAsync()
-        {
-            vagter = (await VagtService.GetAllVagt()).ToList();
-            vagter = vagter.OrderBy(x => x.Vagtid).ToList();
-            ValgtVagt = vagter[0];
-        }
     }
 }
