--- a/festival/Client/Shared/NavMenu.razor
+++ b/festival/Client/Shared/NavMenu.razor
@@ -44,6 +44,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Point-oversigt
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="musikpage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> musikpage
+            </NavLink>
+        </div>
     </nav>
 </div>
 
